feat(recepies): Add a suggested recipes navbar to all recipe pages

--- a/recipes/caprese-stuffed-avocado/index.html
+++ b/recipes/caprese-stuffed-avocado/index.html
@@ -10,7 +10,9 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500&display=swap"
     rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+    integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="../../style/main.css">
   <title>Caprese Stuffed Avocado | Odin Recipes</title>
 </head>
@@ -21,58 +23,75 @@
       <a href="../../">
         <img src="../../assets/images/chef-odin-180w.png" alt="odin logo" height="79">
       </a>
-      <a href="../../" class="home-icone"><i class="fa fa-home"></i></a>
+
     </div>
   </header>
 
   <!-- <p><a href="../../">Home</a> / Caprese Stuffed Avocado</p> -->
+  <main>
+    <div class="container">
 
-  <div class="container">
-    <section class="section-0">
-      <picture>
-    <img srcset="../../assets/images/r-avocado-360w.webp 360w,
+      <img srcset="../../assets/images/r-avocado-360w.webp 360w,
             ../../assets/images/r-avocado-750w.webp 750w" sizes="(max-width: 780px) 360px, 750px"
-      src="../../assets/images/r-avocado-750w.webp" alt="Caprese Stuffed Avocado" height="500px" class="img-hero">
+        src="../../assets/images/r-avocado-750w.webp" alt="Caprese Stuffed Avocado" height="500px" class="img-hero">
 
-    </picture>
-    <aside>
-      <h2>Page contents</h2>
-      <ul>
-        <li><a href="#section-1">Description</a></li>
-        <li><a href="#section-2">Ingredients</a></li>
-        <li><a href="#section-3">Steps</a></li>
-      </ul>
-    </aside>
-  </section>
-      <h1>Caprese Stuffed Avocado</h1>
-    <div class="section-1" id="section-1">
-      <h2 class="description">Description</h2>
+      <article>
+        <div class="container">
+          <h1 class="header-recipe">Caprese Stuffed Avocado</h1>
+          <div class="description" id="description">
+            <h2 class="description">Description</h2>
 
-      <p>This Caprese stuffed avocado salad is made up of avocado halves, filled with a simple Caprese salad using
-        cherry
-        tomatoes, mozzarella pearls, and basil, and drizzled with balsamic vinegar.</p>
+            <p>This Caprese stuffed avocado salad is made up of avocado halves, filled with a simple Caprese salad using
+              cherry
+              tomatoes, mozzarella pearls, and basil, and drizzled with balsamic vinegar.</p>
+          </div>
+          <div class="ingredients" id="ingredients">
+            <h2>Ingredients</h2>
+            <ul>
+              <li>1 avocado - peeled, pitted, and cut in half</li>
+              <li>1/4 cup fresh mozzarella pearls</li>
+              <li>1/4 cup cherry tomatoes, halved</li>
+              <li>6 fresh basil leaves, thinly sliced</li>
+              <li>1 tablespoon balsamic vinegar</li>
+              <li>salt and pepper to taste</li>
+            </ul>
+          </div>
+          <div class="steps" id="steps">
+            <h2>Steps</h2>
+            <ol>
+              <li>Arrange avocado halves onto a plate.</li>
+              <li>Toss together mozzarella pearls, cherry tomatoes, and basil in a small bowl. Spoon the Caprese filling
+                into
+                each
+                avocado half and drizzle with balsamic vinegar. Season with salt and pepper. Serve immediately.</li>
+            </ol>
+          </div>
+        </div>
+
+        <aside>
+          <ul>
+            <li>
+              <div class="aside-item first-item">
+                <a href="../../">Home</a>
+              </div>
+            </li>
+
+            <li>
+              <div class="aside-item second-item">
+                <a href="../../recipes/lemon-chicken-and-rice-casserole/">Chicken</a>
+            </li>
+
+            <li>
+              <div class="aside-item third-item">
+                <a href="../../recipes/tartufo/">Tartufo</a>
+              </div>
+            </li>
+          </ul>
+        </aside>
+
+      </article>
     </div>
-    <div class="section-2" id="section-2">
-      <h2>Ingredients</h2>
-      <ul>
-        <li>1 avocado - peeled, pitted, and cut in half</li>
-        <li>1/4 cup fresh mozzarella pearls</li>
-        <li>1/4 cup cherry tomatoes, halved</li>
-        <li>6 fresh basil leaves, thinly sliced</li>
-        <li>1 tablespoon balsamic vinegar</li>
-        <li>salt and pepper to taste</li>
-      </ul>
-    </div>
-    <div class="section-3" id="section-3">
-      <h2>Steps</h2>
-      <ol>
-        <li>Arrange avocado halves onto a plate.</li>
-        <li>Toss together mozzarella pearls, cherry tomatoes, and basil in a small bowl. Spoon the Caprese filling into
-          each
-          avocado half and drizzle with balsamic vinegar. Season with salt and pepper. Serve immediately.</li>
-      </ol>
-    </div>
-  </div>
+  </main>
 
   <footer>
     <div class="container">
