--- a/recipes/lemon-chicken-and-rice-casserole/index.html
+++ b/recipes/lemon-chicken-and-rice-casserole/index.html
@@ -24,99 +24,128 @@
       <a href="../../">
         <img src="../../assets/images/chef-odin-180w.png" alt="odin logo" height="79">
       </a>
-      <a href="../../" class="home-icone"><i class="fa fa-home"></i></a>
     </div>
   </header>
- 
+
 
   <!-- <p><a href="../../">Home</a> / Lemon Chicken and Rice Casserole </p> -->
-  <div class="container">
-    <section class="section-0">
-      <picture>
-        <img srcset="../../assets/images/chicken-rice-360w.webp 360w,
+  <main>
+    <div class="container">
+
+
+      <img srcset="../../assets/images/chicken-rice-360w.webp 360w,
             ../../assets/images/chicken-rice-750w.webp 750w" sizes="(max-width: 780px) 360px, 750px"
-          src="../../assets/images/checken-rice-750w.webp" alt="Lemon Chicken and Rice Casserole" height="500"
-          class="img-hero">
-      </picture>
-      <aside>
-        <h2>Page contents</h2>
-        <ul>
-          <li><a href="#section-1">Description</a></li>
-          <li><a href="#section-2">Ingredients</a></li>
-          <li><a href="#section-3">Steps</a></li>
-        </ul>
-      </aside>
-    </section>
-    <h1>Lemon Chicken and Rice Casserole</h1>
-    <div class="section-1" id="section-1">
-      <h2 class="description">Description</h2>
+        src="../../assets/images/checken-rice-750w.webp" alt="Lemon Chicken and Rice Casserole" height="500"
+        class="img-hero">
 
-      <p>Casseroles never disappoint. They are filling, hearty, and can last you several meals if you’re cooking for
-        yourself or a few others. This chicken and rice casserole does just that while being bright and bold thanks to
-        lemon, tarragon, and cream of chicken soup. It’s everything you’d want in a chicken and rice soup, but in a
-        casserole.</p>
+      <article>
+        <div class="container">
 
-      <p>The chicken thighs are seared quickly in hot oil before finishing in the oven, resulting in tender and moist
-        meat
-        with a crispy exterior. If you can’t find cream of chicken soup at the store (or want to try a different
-        option),
-        cream of celery or cream of mushroom is a great substitute. Either way, the casserole will come out creamy and
-        perfect.</p>
-    </div>
-    <div class="section-2" id="section-2">
-      <h2>Ingredients</h2>
-      <ul>
-        <li>4 (6-ounce) bone-in, skin-on chicken thighs</li>
-        <li>1 teaspoon kosher salt</li>
-        <li>1/4 teaspoon freshly ground black pepper</li>
-        <li>2 tablespoons olive oil</li>
-        <li>2 cloves garlic, finely chopped</li>
-        <li>1 1/2 cups uncooked long-grain white rice, rinsed</li>
-        <li>1 (10 1/2-ounce) cream of chicken soup</li>
-        <li>1 tablespoon freshly squeezed lemon juice</li>
-        <li>1 teaspoon grated lemon zest</li>
-        <li>1 teaspoon chopped fresh tarragon, plus more for garnish</li>
-        <li>1/4 teaspoon crushed red pepper, plus more for garnish</li>
-        <li>2 cups chicken broth</li>
-        <li>1 lemon, sliced into 1/8-inch thick slices</li>
-        <li>1 teaspoon chopped fresh flat-leaf parsley</li>
-      </ul>
-    </div>
-    <div class="section-3" id="section-3">
-      <h2>Steps</h2>
-      <ol>
-        <li>Gather all ingredients.</li>
-        <li>Preheat the oven to 375 degrees F (190 degrees C). Season chicken thighs evenly with salt and pepper on both
-          sides.</li>
-        <li>Heat oil in a large oven-safe skillet over medium-high. Add chicken thighs to skillet, skin sides down, and
-          cook
-          until golden brown on both sides, about 8 minutes. Transfer chicken thighs to a plate; set aside. Do not wipe
-          skillet clean.</li>
-        <li>Add garlic to drippings in the skillet. Cook, stirring constantly, until fragrant, 10 to 20 seconds. Add
-          rice,
-          cream of chicken soup, lemon juice, lemon zest, tarragon, and crushed red pepper; whisk to combine. Gradually
-          add
-          broth, whisking constantly, until combined and smooth. Arrange chicken thighs, skin sides up, over rice
-          mixture
-          and place lemon slices over chicken thighs. Cover tightly with aluminum foil or lid, and transfer to the
-          preheated
-          oven.</li>
-        <li>Add garlic to drippings in the skillet. Cook, stirring constantly, until fragrant, 10 to 20 seconds. Add
-          rice,
-          cream of chicken soup, lemon juice, lemon zest, tarragon, and crushed red pepper; whisk to combine. Gradually
-          add
-          broth, whisking constantly, until combined and smooth. Arrange chicken thighs, skin sides up, over rice
-          mixture
-          and place lemon slices over chicken thighs. Cover tightly with aluminum foil or lid, and transfer to the
-          preheated
-          oven.</li>
-        <li>Remove from the oven. Stir rice mixture, and sprinkle with parsley. Divide chicken, lemon slices, and rice
-          evenly among 4 plates. Garnish with
-          additional tarragon and crushed red pepper.</li>
-      </ol>
-    </div>
-  </div>
+          <h1 class="header-recipe">Lemon Chicken and Rice Casserole</h1>
+          <div class="description" id="description">
+            <h2 class="description">Description</h2>
 
+            <p>Casseroles never disappoint. They are filling, hearty, and can last you several meals if you’re cooking
+              for
+              yourself or a few others. This chicken and rice casserole does just that while being bright and bold
+              thanks to
+              lemon, tarragon, and cream of chicken soup. It’s everything you’d want in a chicken and rice soup, but in
+              a
+              casserole.</p>
+
+            <p>The chicken thighs are seared quickly in hot oil before finishing in the oven, resulting in tender and
+              moist
+              meat
+              with a crispy exterior. If you can’t find cream of chicken soup at the store (or want to try a different
+              option),
+              cream of celery or cream of mushroom is a great substitute. Either way, the casserole will come out creamy
+              and
+              perfect.</p>
+          </div>
+          <div class="ingredients" id="ingredients">
+            <h2>Ingredients</h2>
+            <ul>
+              <li>4 (6-ounce) bone-in, skin-on chicken thighs</li>
+              <li>1 teaspoon kosher salt</li>
+              <li>1/4 teaspoon freshly ground black pepper</li>
+              <li>2 tablespoons olive oil</li>
+              <li>2 cloves garlic, finely chopped</li>
+              <li>1 1/2 cups uncooked long-grain white rice, rinsed</li>
+              <li>1 (10 1/2-ounce) cream of chicken soup</li>
+              <li>1 tablespoon freshly squeezed lemon juice</li>
+              <li>1 teaspoon grated lemon zest</li>
+              <li>1 teaspoon chopped fresh tarragon, plus more for garnish</li>
+              <li>1/4 teaspoon crushed red pepper, plus more for garnish</li>
+              <li>2 cups chicken broth</li>
+              <li>1 lemon, sliced into 1/8-inch thick slices</li>
+              <li>1 teaspoon chopped fresh flat-leaf parsley</li>
+            </ul>
+          </div>
+          <div class="steps" id="steps">
+            <h2>Steps</h2>
+            <ol>
+              <li>Gather all ingredients.</li>
+              <li>Preheat the oven to 375 degrees F (190 degrees C). Season chicken thighs evenly with salt and pepper
+                on both
+                sides.</li>
+              <li>Heat oil in a large oven-safe skillet over medium-high. Add chicken thighs to skillet, skin sides
+                down, and
+                cook
+                until golden brown on both sides, about 8 minutes. Transfer chicken thighs to a plate; set aside. Do not
+                wipe
+                skillet clean.</li>
+              <li>Add garlic to drippings in the skillet. Cook, stirring constantly, until fragrant, 10 to 20 seconds.
+                Add
+                rice,
+                cream of chicken soup, lemon juice, lemon zest, tarragon, and crushed red pepper; whisk to combine.
+                Gradually
+                add
+                broth, whisking constantly, until combined and smooth. Arrange chicken thighs, skin sides up, over rice
+                mixture
+                and place lemon slices over chicken thighs. Cover tightly with aluminum foil or lid, and transfer to the
+                preheated
+                oven.</li>
+              <li>Add garlic to drippings in the skillet. Cook, stirring constantly, until fragrant, 10 to 20 seconds.
+                Add
+                rice,
+                cream of chicken soup, lemon juice, lemon zest, tarragon, and crushed red pepper; whisk to combine.
+                Gradually
+                add
+                broth, whisking constantly, until combined and smooth. Arrange chicken thighs, skin sides up, over rice
+                mixture
+                and place lemon slices over chicken thighs. Cover tightly with aluminum foil or lid, and transfer to the
+                preheated
+                oven.</li>
+              <li>Remove from the oven. Stir rice mixture, and sprinkle with parsley. Divide chicken, lemon slices, and
+                rice
+                evenly among 4 plates. Garnish with
+                additional tarragon and crushed red pepper.</li>
+            </ol>
+          </div>
+        </div>
+        <aside>
+          <ul>
+            <li>
+              <div class="aside-item first-item">
+                <a href="../../">Home</a>
+              </div>
+            </li>
+
+            <li>
+              <div class="aside-item second-item">
+                <a href="../caprese-stuffed-avocado/">Chicken</a>
+            </li>
+
+            <li>
+              <div class="aside-item third-item">
+                <a href="../tartufo/">Tartufo</a>
+              </div>
+            </li>
+          </ul>
+        </aside>
+      </article>
+    </div>
+  </main>
   <footer>
     <div class="container">
       <div class="footer-about">
