feat(chef-odin)!: replace aside section with navbar in new version
BREAKING CHANGE:
The aside section has been removed and replaced with a navbar.
Any reference to the aside section in the previous version
 will no longer work.

--- a/recipes/lemon-chicken-and-rice-casserole/index.html
+++ b/recipes/lemon-chicken-and-rice-casserole/index.html
@@ -18,12 +18,19 @@
 </head>
 
 <body>
-
   <header>
     <div class="container">
-      <a href="../../">
-        <img src="../../assets/images/chef-odin-180w.png" alt="odin logo" height="79">
-      </a>
+      <div class="logo">
+        <a href="../../">
+          <img src="../../assets/images/chef-odin-180w.png" alt="odin logo" height="79">
+        </a>
+      </div>
+      <nav>
+        <menu >
+          <li><a href="../../">Home</a></li>
+          <li><a href="../">All Recipes</a></li>
+        </menu>
+      </nav>
     </div>
   </header>
 
@@ -125,6 +132,7 @@
         </div>
         <aside>
           <ul>
+            <h2>Most Read</h2>
             <li>
               <div class="aside-item first-item">
                 <a href="../../">Home</a>
