--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500&display=swap"
     rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+    integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="./style/main.css">
 
   <title>Odin Recipes</title>
@@ -20,15 +22,24 @@
 
   <header>
     <div class="container">
-      <a href="./">
-        <img src="./assets/images/chef-odin-180w.png" alt="odin logo" height="79">
-      </a>
+
+      <div class="logo">
+        <a href="./">
+          <img src="./assets/images/chef-odin-180w.png" alt="odin logo" height="79">
+        </a>
+      </div>
+      <nav>
+        <menu >
+          <li><a href="#">Home</a></li>
+          <li><a href="./recipes/">All Recipes</a></li>
+        </menu>
+      </nav>
     </div>
   </header>
 
   <main>
     <div class="container">
-      
+
       <img srcset="./assets/images/hero-image-360w.webp 360w,
               ./assets/images/hero-image-750w.webp 750w" sizes="(max-width: 400px) 360px, 750px"
         src="./assets/images/hero-image-750w.webp" alt="A steak is cooking in a skillet on a wooden table"
@@ -39,31 +50,38 @@
       <ul class="cards-container">
         <li class="card">
           <img src="./assets/images/tartufo-360w.webp" height="150" alt="Tartufo">
-          <h2>
-            <a href="./recipes/tartufo/">Tartufo</a>
-          </h2>
-          <p>Tartufo is a classic Italian dessert that you can make at home. It requires some patience as there is
-            freezing time involved. Rolling. in pistachio and cookie crumbs is extra delicious.</p>
-          <a class="card-btn" href="./recipes/tartufo/">Read More</a>
+          <div class="card-content">
+            <h2>
+              <a href="./recipes/tartufo/">Tartufo</a>
+            </h2>
+            <p>Tartufo is a classic Italian dessert that you can make at home. It requires some patience as there is
+              freezing time involved. Rolling. in pistachio and cookie crumbs is extra delicious.</p>
+            <a class="card-btn" href="./recipes/tartufo/">Read More</a>
+          </div>
         </li>
 
         <li class="card">
 
           <img src="./assets/images/r-avocado-360w.webp" height="150" alt="Capress Stuffed Avocado">
-          <h2><a href="./recipes/caprese-stuffed-avocado/">Capress Stuffed Avocado</a>
-          </h2>
-          <p>This Caprese stuffed avocado salad is made up of avocado halves, filled with a simple Caprese salad using
-            mozzarella pearls, and basil, and drizzled with balsamic vinegar.</p>
-          <a class="card-btn" href="./recipes/caprese-stuffed-avocado/">Read More</a>
+          <div class="card-content">
+            <h2><a href="./recipes/caprese-stuffed-avocado/">Capress Stuffed Avocado</a>
+            </h2>
+            <p>This Caprese stuffed avocado salad is made up of avocado halves, filled with a simple Caprese salad using
+              mozzarella pearls, and basil, and drizzled with balsamic vinegar.</p>
+            <a class="card-btn" href="./recipes/caprese-stuffed-avocado/">Read More</a>
+          </div>
         </li>
 
         <li class="card right-item">
           <img src="./assets/images/chicken-rice-360w.webp" height="150" alt="Lemon Chicken rice">
-          <h2><a href="./recipes/lemon-chicken-and-rice-casserole/">Lemon Chicken and Rice Casserole</a>
-          </h2>
-          <p>Casseroles never disappoint. They are filling, hearty, and can last you several meals if you’re cooking for
-            yourself or a few others. </p>
-          <a class="card-btn" href="./recipes/lemon-chicken-and-rice-casserole/">Read More</a>
+          <div class="card-content">
+            <h2><a href="./recipes/lemon-chicken-and-rice-casserole/">Lemon Chicken and Rice Casserole</a>
+            </h2>
+            <p>Casseroles never disappoint. They are filling, hearty, and can last you several meals if you’re cooking
+              for
+              yourself or a few others. </p>
+            <a class="card-btn" href="./recipes/lemon-chicken-and-rice-casserole/">Read More</a>
+          </div>
         </li>
 
       </ul>
@@ -99,6 +117,7 @@
       </div>
     </div>
   </footer>
+
 </body>
 
 </html>
