--- a/recipes/caprese-stuffed-avocado/index.html
+++ b/recipes/caprese-stuffed-avocado/index.html
@@ -20,10 +20,17 @@
 <body>
   <header>
     <div class="container">
-      <a href="../../">
-        <img src="../../assets/images/chef-odin-180w.png" alt="odin logo" height="79">
-      </a>
-
+      <div class="logo">
+        <a href="../../">
+          <img src="../../assets/images/chef-odin-180w.png" alt="odin logo" height="79">
+        </a>
+      </div>
+      <nav>
+        <menu >
+          <li><a href="../../">Home</a></li>
+          <li><a href="../">All Recipes</a></li>
+        </menu>
+      </nav>
     </div>
   </header>
 
@@ -70,6 +77,7 @@
 
         <aside>
           <ul>
+            <h2>Most Read</h2>
             <li>
               <div class="aside-item first-item">
                 <a href="../../">Home</a>
