--- a/recipes/tartufo/index.html
+++ b/recipes/tartufo/index.html
@@ -20,9 +20,17 @@
 <body>
   <header>
     <div class="container">
-      <a href="../../">
-        <img src="../../assets/images/chef-odin-180w.png" alt="odin logo" height="79">
-      </a>
+      <div class="logo">
+        <a href="../../">
+          <img src="../../assets/images/chef-odin-180w.png" alt="odin logo" height="79">
+        </a>
+      </div>
+      <nav>
+        <menu>
+          <li><a href="../../">Home</a></li>
+          <li><a href="../">All Recipes</a></li>
+        </menu>
+      </nav>
     </div>
   </header>
   <!-- <p><a href="../../">Home</a> / Tartufo</p> -->
@@ -36,88 +44,92 @@
 
       <article>
         <div class="container">
-        <h1 class="header-recipe">Tartufo</h1>
-        <div class="description" id="description">
-          <h2 class="description">Description</h2>
-          <p>Tartufo is a classic Italian dessert that you can make at home. It requires some patience as there is
-            freezing
-            time
-            involved. Rolling the tartufos in pistachio and cookie crumbs is extra delicious.</p>
+          <h1 class="header-recipe">Tartufo</h1>
+          <div class="description" id="description">
+            <h2 class="description">Description</h2>
+            <p>Tartufo is a classic Italian dessert that you can make at home. It requires some patience as there is
+              freezing
+              time
+              involved. Rolling the tartufos in pistachio and cookie crumbs is extra delicious.</p>
+          </div>
+          <div class="ingredients" id="ingredients">
+            <h2>Ingredients</h2>
+            <ul>
+              <li>1 quart vanilla ice cream (such as Haagen Dazs®)</li>
+              <li>8 maraschino cherries (such as Luxardo®) </li>
+              <li>2 cups semisweet chocolate chips</li>
+              <li>5 tablespoons unrefined coconut oil</li>
+              <li>36 chocolate wafer cookies (such as Dewey’s Bakery®) (optional)</li>
+              <li>1/2 cup salted roasted pistachios (optional)</li>
+            </ul>
+          </div>
+          <div class="steps" id="steps">
+            <h2>Steps</h2>
+            <ol>
+              <li>Gather all ingredients.</li>
+              <li>Let ice cream stand at room temperature until slightly softened, about 10 minutes. Line 8 small bowls
+                with
+                plastic wrap, leaving a 3-inch overhang.</li>
+              <li>Using a 2 oz. (1/4-cup) ice-cream scoop, place 1 scoop of ice cream into the bottom of each bowl.
+                Gently
+                press
+                a
+                maraschino cherry into the top of each ice-cream scoop, then top each with another 2 oz. (1/4-cup) scoop
+                of
+                ice
+                cream. </li>
+              <li>Working with 1 bowl of ice cream at a time, gather overhanging plastic, wrap it up around ice cream,
+                and
+                gently
+                twist it to form a ball. Freeze until ice cream is firm and set, about 2 hours. </li>
+              <li>Place chocolate chips in a large microwave-safe bowl, and microwave on HIGH in (30-second) intervals,
+                stirring
+                thoroughly between intervals, until melted, 3 to 4 minutes total. Whisk in coconut oil until oil is
+                completely
+                melted and mixture is combined. Let cool slightly at room temperature, about 10 minutes.</li>
+              <li>Meanwhile, pulse cookies and pistachios, if using, in a food processor until finely ground, about 15
+                quick
+                pulses. Transfer to a shallow bowl, and set aside at room temperature.</li>
+              <li>Working with 1 ice-cream ball at a time, remove ice-cream ball from freezer. Remove plastic wrap, and
+                place
+                ice-cream ball on a wire rack set inside a rimmed baking sheet. Pour chocolate mixture over ice-cream
+                ball,
+                allowing it to thinly coat the top and sides.</li>
+              <li>If coating in cookie mixture, quickly and carefully invert chocolate-coated ice-cream ball into cookie
+                mixture,
+                rolling until evenly coated. Transfer coated ice cream ball to a clean wire rack set inside a large,
+                rimmed
+                baking
+                sheet in the freezer. Repeat process with remaining 7 ice-cream balls, returning to the freezer after
+                each
+                one.
+                Freeze until set, about 1 hour, or until ready to serve.</li>
+            </ol>
+          </div>
         </div>
-        <div class="ingredients" id="ingredients">
-          <h2>Ingredients</h2>
+        <aside>
           <ul>
-            <li>1 quart vanilla ice cream (such as Haagen Dazs®)</li>
-            <li>8 maraschino cherries (such as Luxardo®) </li>
-            <li>2 cups semisweet chocolate chips</li>
-            <li>5 tablespoons unrefined coconut oil</li>
-            <li>36 chocolate wafer cookies (such as Dewey’s Bakery®) (optional)</li>
-            <li>1/2 cup salted roasted pistachios (optional)</li>
+            <h2>Most Read</h2>
+            <li>
+              <div class="aside-item first-item">
+                <a href="../lemon-chicken-and-rice-casserole/">Creamy</a>
+              </div>
+            </li>
+
+            <li>
+              <div class="aside-item second-item">
+                <a href="../lemon-chicken-and-rice-casserole/">Chicken</a>
+            </li>
+
+            <li>
+              <div class="aside-item third-item">
+                <a href="../caprese-stuffed-avocado/">Tartufo</a>
+              </div>
+            </li>
           </ul>
-        </div>
-        <div class="steps" id="steps">
-          <h2>Steps</h2>
-          <ol>
-            <li>Gather all ingredients.</li>
-            <li>Let ice cream stand at room temperature until slightly softened, about 10 minutes. Line 8 small bowls
-              with
-              plastic wrap, leaving a 3-inch overhang.</li>
-            <li>Using a 2 oz. (1/4-cup) ice-cream scoop, place 1 scoop of ice cream into the bottom of each bowl. Gently
-              press
-              a
-              maraschino cherry into the top of each ice-cream scoop, then top each with another 2 oz. (1/4-cup) scoop
-              of
-              ice
-              cream. </li>
-            <li>Working with 1 bowl of ice cream at a time, gather overhanging plastic, wrap it up around ice cream, and
-              gently
-              twist it to form a ball. Freeze until ice cream is firm and set, about 2 hours. </li>
-            <li>Place chocolate chips in a large microwave-safe bowl, and microwave on HIGH in (30-second) intervals,
-              stirring
-              thoroughly between intervals, until melted, 3 to 4 minutes total. Whisk in coconut oil until oil is
-              completely
-              melted and mixture is combined. Let cool slightly at room temperature, about 10 minutes.</li>
-            <li>Meanwhile, pulse cookies and pistachios, if using, in a food processor until finely ground, about 15
-              quick
-              pulses. Transfer to a shallow bowl, and set aside at room temperature.</li>
-            <li>Working with 1 ice-cream ball at a time, remove ice-cream ball from freezer. Remove plastic wrap, and
-              place
-              ice-cream ball on a wire rack set inside a rimmed baking sheet. Pour chocolate mixture over ice-cream
-              ball,
-              allowing it to thinly coat the top and sides.</li>
-            <li>If coating in cookie mixture, quickly and carefully invert chocolate-coated ice-cream ball into cookie
-              mixture,
-              rolling until evenly coated. Transfer coated ice cream ball to a clean wire rack set inside a large,
-              rimmed
-              baking
-              sheet in the freezer. Repeat process with remaining 7 ice-cream balls, returning to the freezer after each
-              one.
-              Freeze until set, about 1 hour, or until ready to serve.</li>
-          </ol>
-        </div>
-    </div>
-    <aside>
-      <ul>
-        <li>
-          <div class="aside-item first-item">
-            <a href="../../">Home</a>
-          </div>
-        </li>
+        </aside>
 
-        <li>
-          <div class="aside-item second-item">
-            <a href="../lemon-chicken-and-rice-casserole/">Chicken</a>
-        </li>
-
-        <li>
-          <div class="aside-item third-item">
-            <a href="../caprese-stuffed-avocado/">Tartufo</a>
-          </div>
-        </li>
-      </ul>
-    </aside>
-
-    </article>
+      </article>
     </div>
   </main>
   <footer>
