fix(recipes): add missing css link

--- a/recipes/index.html
+++ b/recipes/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <link rel="shortcut icon" href="../../favicon.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
@@ -14,7 +14,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
     integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <link rel="stylesheet" href="../../style/main.css">
+  <link rel="stylesheet" href="../style/main.css">
   <title>Document</title>
 </head>
 
@@ -22,13 +22,13 @@
   <header>
     <div class="container">
       <div class="logo">
-        <a href="../../">
-          <img src="../../assets/images/chef-odin-180w.png" alt="odin logo" height="79">
+        <a href="../">
+          <img src="../assets/images/chef-odin-180w.png" alt="odin logo" height="79">
         </a>
       </div>
       <nav>
         <menu >
-          <li><a href="../../">Home</a></li>
+          <li><a href="../">Home</a></li>
           <li><a href="../">All Recipes</a></li>
         </menu>
       </nav>
@@ -74,7 +74,7 @@
         </li>
 
         <li class="card">
-          <img src="../../assets/images/creamy-chicken-360w.webp" height="150" alt="Tartufo">
+          <img src="../assets/images/creamy-chicken-360w.webp" height="150" alt="Tartufo">
           <div class="card-content">
           <h2>
             <a href="#">Pan Chicken Gnocchi</a>
